--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,2 @@
-DATABASE_URL=postgresql://postgres:Naitik%4015@db.biphjalzrfugmmaebgrf.supabase.co:5432/postgres
-NEXT_PUBLIC_API_URL=http://localhost:9002
+MONGODB_URI="mongodb+srv://Naitik:Naitik%4015@cluster0.ctcnkti.mongodb.net/?appName=Cluster0"
+NEXT_PUBLIC_API_URL="http://localhost:9002"
